--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,7 @@
         "nesbot/carbon": "^2.58",
         "rollbar/rollbar-laravel": "^7.2",
         "spatie/laravel-query-builder": "^5.0",
-        "squizlabs/php_codesniffer": "^3.6",
-        "twbs/bootstrap": "5.2.0-beta1"
+        "squizlabs/php_codesniffer": "^3.6"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.12",
